--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">AroundU</string>
-    <string name="title_activity_landing">Map</string>
+    <string name="title_activity_landing">AroundU</string>
 </resources>
